# csv_compiler

./: .gitignore  Cargo.toml
src/: error.rs  event_data.rs  input_file.rs  input_file_reader.rs  main.rs
src/formatter/: mod.rs  raw_formatter.rs
